--- a/shaicha-manager/src/main/resources/templates/information/student/shifanstudent.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/shifanstudent.html
@@ -37,6 +37,9 @@
 								 <button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="jyjshaichabaogao()">
 									   教育局筛查报告
 								</button>
+								<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="wxtuisong()">
+									 微信推送
+								</button>
 							</div>
 						</div>
 						<div class="columns pull-right">
