--- a/shaicha-manager/src/main/resources/templates/information/student/QrCode.html
+++ b/shaicha-manager/src/main/resources/templates/information/student/QrCode.html
@@ -13,7 +13,7 @@
 							<div class="form-group">
 								<div class="col-sm-8">
 									<label></label>
-									<img width="300" height="300" id="QRCode" alt="" th:src="${student.QRCode}">
+									<img width="300" height="300" style="margin-left:25px;" th:src="${code}" />
 								</div>
 							</div>
 						</form>
