--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
@@ -212,7 +212,7 @@
 						$("#school").empty();
 						if (data.length>0) {
 							var html = '';
-							html += '<option value="">请选择</option>'
+							//html += '<option value="">请选择</option>'
 							for(var i = 0; i < data.length; i++) {
 								html += '<option value="' + data[i].activityId + '">' + data[i].school + '</option>'
 	                       		//$("#school").append("<option value=\"" + data[i].activityId + "\">" + data[i].school + "</option>");
