--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/示范校筛查打印.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/示范校筛查打印.html
@@ -103,28 +103,94 @@
    <p style="font-size:10.5pt; line-height:150%; margin:0pt; orphans:0; widows:0"><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">说明：</span><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">①儿童</span><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">青少年裸眼视力正常值和戴镜视力水平一般为：</span><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">3岁</span><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">≥4.7</span><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">,4</span><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">-5</span><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">岁</span><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">≥4.8</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">，</span><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">6</span><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">岁以上</span><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">≥4.9</span></p>
    <p style="font-size:10.5pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; text-indent:31.5pt; widows:0"><span style="background-color:#ffffff; color:#333333; font-family:宋体; font-size:10.5pt; font-weight:bold">②</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">电脑</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">验光中</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">，‘球镜’为近视/远视</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">度数</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">、</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">‘</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">柱镜</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">’</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">为</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">散光度数、</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">‘轴位’为</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">散光的方向</span></p>
    <p style="font-size:10.5pt; line-height:150%; margin:0pt; orphans:0; text-align:justify; text-indent:31.5pt; widows:0"><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">③眼压</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">正常范围</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">：10-21</span><span style="font-family:宋体; font-size:10.5pt; font-weight:bold">mmhg</span></p>
-   <table cellspacing="0" cellpadding="0" style="border-collapse:collapse; margin-left:0pt">
-    <tbody>
-     <tr>
-      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt"><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="font-family:宋体; font-size:12pt; font-weight:bold">左眼初步</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">建议与预警提示</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">：</span></p></td>
-     </tr>
-     <tr>
-      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt"><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt" th:text="${zdoctorchubu}">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p></td>
-     </tr>
-    </tbody>
-   </table>
    
-   
-    <table cellspacing="0" cellpadding="0" style="border-collapse:collapse; margin-left:0pt">
-    <tbody>
-     <tr>
-      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt"><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="font-family:宋体; font-size:12pt; font-weight:bold">右眼初步</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">建议与预警提示</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">：</span></p></td>
-     </tr>
-     <tr>
-      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt"><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt" th:text="${ydoctorchubu}">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p></td>
-     </tr>
-    </tbody>
-   </table>
+   <div th:switch="${ifStu}">
+   	<div th:case="'1'" >
+   		   
+	   <table cellspacing="0" cellpadding="0" style="border-collapse:collapse; margin-left:0pt">
+	    <tbody>
+	     <tr>
+	      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt"><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="font-family:宋体; font-size:12pt; font-weight:bold">左眼初步</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">建议与预警提示</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">：</span></p></td>
+	     </tr>
+	     <tr>
+	      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt">
+		      <p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0">
+		      	<span style="color:#ff0000; font-family:Calibri; font-size:11pt"><img alt="" src="/img/kong.png"><em style="margin-left: 10px;"></em>1、视力目前正常，建议每3个月进行一次视力检查</span>
+		      </p>
+		      <p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0">
+		      	<span style="color:#ff0000; font-family:Calibri; font-size:11pt"><img alt="" src="/img/kong.png"><em style="margin-left: 10px;"></em>2、视力目前正常，但是有发生近视的可能性，建议2周内到正规医院进行详细眼科检查 </span>
+		      </p>
+		      <p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0">
+		      	<span style="color:#ff0000; font-family:Calibri; font-size:11pt"><img alt="" src="/img/kong.png"><em style="margin-left: 10px;"></em>3、视力下降，建议到正规医院进行详细眼科检查，查明原因 </span>
+		      </p>
+		      <p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0">
+		      	<span style="color:#ff0000; font-family:Calibri; font-size:11pt"><img alt="" src="/img/kong.png"><em style="margin-left: 10px;"></em>4、戴镜视力正常，建议每3个月进行一次医学验光检查 </span>
+		      </p>
+		      <p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0">
+		      	<span style="color:#ff0000; font-family:Calibri; font-size:11pt"><img alt="" src="/img/kong.png"><em style="margin-left: 10px;"></em>5、戴镜视力下降，建议2周内到正规医院进行医学验光检查，更换眼镜筛查结果不具有诊断意义，应到具备有效的医疗机构执业许可证的医疗机构进一步检查以确诊。</span>
+		      </p>
+		      
+	      </td>
+	     </tr>
+	    </tbody>
+	   </table>
+	   
+	    <table cellspacing="0" cellpadding="0" style="border-collapse:collapse; margin-left:0pt">
+	    <tbody>
+	     <tr>
+	      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt"><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="font-family:宋体; font-size:12pt; font-weight:bold">右眼初步</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">建议与预警提示</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">：</span></p></td>
+	     </tr>
+	     <tr>
+	      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt">
+		      <p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0">
+		      	<span style="color:#ff0000; font-family:Calibri; font-size:11pt"><img alt="" src="/img/kong.png"><em style="margin-left: 10px;"></em>1、视力目前正常，建议每3个月进行一次视力检查</span>
+		      </p>
+		      <p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0">
+		      	<span style="color:#ff0000; font-family:Calibri; font-size:11pt"><img alt="" src="/img/kong.png"><em style="margin-left: 10px;"></em>2、视力目前正常，但是有发生近视的可能性，建议2周内到正规医院进行详细眼科检查 </span>
+		      </p>
+		      <p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0">
+		      	<span style="color:#ff0000; font-family:Calibri; font-size:11pt"><img alt="" src="/img/kong.png"><em style="margin-left: 10px;"></em>3、视力下降，建议到正规医院进行详细眼科检查，查明原因 </span>
+		      </p>
+		      <p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0">
+		      	<span style="color:#ff0000; font-family:Calibri; font-size:11pt"><img alt="" src="/img/kong.png"><em style="margin-left: 10px;"></em>4、戴镜视力正常，建议每3个月进行一次医学验光检查 </span>
+		      </p>
+		      <p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0">
+		      	<span style="color:#ff0000; font-family:Calibri; font-size:11pt"><img alt="" src="/img/kong.png"><em style="margin-left: 10px;"></em>5、戴镜视力下降，建议2周内到正规医院进行医学验光检查，更换眼镜筛查结果不具有诊断意义，应到具备有效的医疗机构执业许可证的医疗机构进一步检查以确诊。</span>
+		      </p>
+		      
+	      </td>
+	     </tr>
+	    </tbody>
+	   </table>
+   	
+   	</div>
+   	<div th:case="'2'" >
+ 
+	   <table cellspacing="0" cellpadding="0" style="border-collapse:collapse; margin-left:0pt">
+	    <tbody>
+	     <tr>
+	      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt"><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="font-family:宋体; font-size:12pt; font-weight:bold">左眼初步</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">建议与预警提示</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">：</span></p></td>
+	     </tr>
+	     <tr>
+	      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt"><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt" th:text="${zdoctorchubu}">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p></td>
+	     </tr>
+	    </tbody>
+	   </table>
+	   
+	   
+	    <table cellspacing="0" cellpadding="0" style="border-collapse:collapse; margin-left:0pt">
+	    <tbody>
+	     <tr>
+	      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt"><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="font-family:宋体; font-size:12pt; font-weight:bold">右眼初步</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">建议与预警提示</span><span style="font-family:宋体; font-size:12pt; font-weight:bold">：</span></p></td>
+	     </tr>
+	     <tr>
+	      <td style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:top; width:481.9pt"><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt" th:text="${ydoctorchubu}">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p><p style="margin:0pt 22pt 0pt 0pt; orphans:0; text-align:justify; widows:0"><span style="color:#ff0000; font-family:Calibri; font-size:11pt">&nbsp;</span></p></td>
+	     </tr>
+	    </tbody>
+	   </table>
+   	</div>
+   </div>
+
    
    <!--  <table cellspacing="0" cellpadding="0" style="border-collapse:collapse; margin-left:0pt">
     <tbody>
