--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
@@ -221,6 +221,7 @@
 	                           $("#school").selectpicker('refresh');
 	                           $("#grade").empty();
 	   						   $("#stuclass").empty();
+	   						stuschool();
 						}else{
 							$("#school").empty();
 							$("#school").selectpicker('refresh');
