--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/add.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/add.html
@@ -47,13 +47,13 @@
 										type="text">
 								</div>
 							</div>
-							<!-- <div class="form-group">
+							<div class="form-group">
 								<label class="col-sm-3 control-label">出生年月：</label>
 								<div class="col-sm-8">
 									<input id="birthday" name="birthday" class="form-control"
 										type="text">
 								</div>
-							</div> -->
+							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">证件类型：</label>
 								<div class="col-sm-8">
@@ -75,7 +75,7 @@
 										class="form-control" type="text">
 								</div>
 							</div>
-							<input id="birthday" name="birthday" class="form-control" type="hidden">
+							<!-- <input id="birthday" name="birthday" class="form-control" type="hidden"> -->
 							<div class="form-group">
 								<label class="col-sm-3 control-label">学校：</label>
 								<div class="col-sm-8">
@@ -180,10 +180,10 @@
 		
 	</script>
 	<script type="text/javascript">
-	/* laydate.render({
+	laydate.render({
 		elem: '#birthday',
 		type: 'date'
-	}); */
+	});
 	
 	$(window).on('load', function () {
  		$('.selectpicker').selectpicker();
