--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/batchdayinerweima.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/batchdayinerweima.html
@@ -4,7 +4,7 @@
 <head></head>
 <body style="width: 224px; border:1px solid #000000;">
 
-	<div th:each="stu:${student}" style="float: left;width:90%; margin-left: 8px; margin-top: 50px;position: relative;border:1px solid #000000;"">
+	<div th:each="stu:${student}" style="float: left;width:90%; margin-left: 8px; margin-top: 30px;position: relative;border:2px solid #000000;"">
 		<img alt="" th:src="${stu.QRCode}" style="width: 100% !important; height: auto !important;">
 		<table cellspacing="0" cellpadding="0" style=" width: 100%;border-top: 1px solid #000000;">
 			<tbody>
@@ -15,7 +15,7 @@
 					<td>年级：<span th:text="${stu.grade}" ></span></td>
 				</tr>
 				<tr>
-					<td>姓名：<span th:text="${stu.studentClass}" ></span></td>
+					<td>班级：<span th:text="${stu.studentClass}" ></span></td>
 				</tr>
 			</tbody>
 		</table>
