--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/edit.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/edit.html
@@ -57,7 +57,7 @@
 								<div class="col-sm-8">
 									<input id="birthday" name="birthday"
 										th:value="${student?.birthday} == null?'':${#dates.format(student.birthday, 'yyyy-MM-dd')}" class="form-control"
-										type="text" readonly="readonly">
+										type="text">
 								</div>
 							</div>
 							<div class="form-group">
@@ -194,10 +194,10 @@
 		
 	</script>
 		<script type="text/javascript">
-		/* laydate.render({
+		 laydate.render({
 			elem: '#birthday',
 			type: 'date'
-		}); */
+		}); 
 		
 		$(window).on('load', function () {
 	 		$('.selectpicker').selectpicker();
