--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/batchdayinerweima.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/batchdayinerweima.html
@@ -9,6 +9,9 @@
 		<table cellspacing="0" cellpadding="0" style=" width: 100%;border-top: 1px solid #000000;">
 			<tbody>
 				<tr>
+					<td>学生id：<span th:text="${stu.id}" ></span></td>
+				</tr>
+				<tr>
 					<td>姓名：<span th:text="${stu.studentName}" ></span></td>
 				</tr>
 				<tr>
