--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
@@ -33,6 +33,9 @@
 								 <button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="shaichajieguodaochu()">
 									   筛查结果导出
 								</button>
+								<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="huodongbaogao()">
+									   活动报告
+								</button>
 						</div>
 						<div class="columns pull-right">
 							<button class="btn btn-success" onclick="reLoad()">查询</button>
