--- a/shaicha-manager/src/main/resources/templates/index_v1.html
+++ b/shaicha-manager/src/main/resources/templates/index_v1.html
@@ -29,7 +29,7 @@
             <ul class="nav" id="side-menu">
                 <li class="nav-header">
                     <div>
-                        <span><img alt="image" class="" height="60" width="50" th:src="${picUrl}"/></span>
+                        <span><img alt="image" class="" height="60" width="50" src="/img/xinshinengn.png"/></span>
                         <h3 class="" style="color: #ffffff">
                             </i>近视防控数据平台
                         </h3>
