--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/edit.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/edit.html
@@ -121,6 +121,7 @@
 		                        		<option value="初一">初一</option>
 		                        		<option value="初二">初二</option>
 		                        		<option value="初三">初三</option>
+		                        		<option value="初四">初四</option>
 		                        		<option value="高一">高一</option>
 		                        		<option value="高二">高二</option>
 		                        		<option value="高三">高三</option>
