--- a/shaicha-manager/src/main/resources/templates/informationNEW/school/add.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/school/add.html
@@ -9,13 +9,13 @@
 				<div class="ibox float-e-margins">
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
-							<div class="form-group">
+							<!-- <div class="form-group">
 								<label class="col-sm-3 control-label">学校编码：</label>
 								<div class="col-sm-8">
 									<input id="orgcode" name="orgcode" class="form-control"
 										type="text">
 								</div>
-							</div>
+							</div> -->
 							<div class="form-group">
 								<label class="col-sm-3 control-label">学校名称：</label>
 								<div class="col-sm-8">
