--- a/shaicha-manager/src/main/resources/templates/informationNEW/school/edit.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/school/edit.html
@@ -10,13 +10,13 @@
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
 							<input id="id" name="id" th:value="${school.id}" type="hidden">
-							<div class="form-group">
+							<!-- <div class="form-group">
 								<label class="col-sm-3 control-label">学校编码：</label>
 								<div class="col-sm-8">
 									<input id="orgcode" name="orgcode" th:value="${school.orgcode}"
 										class="form-control" type="text">
 								</div>
-							</div>
+							</div> -->
 							<div class="form-group">
 								<label class="col-sm-3 control-label">学校名称：</label>
 								<div class="col-sm-8">
