--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
@@ -125,6 +125,8 @@
     
     <div id="overYearGradeSex" style="width: 800px;height:400px;display: none;"></div>
     
+    <div id="shangcibulingjinshi" style="width: 800px;height:400px;display: none;"></div>
+    
     <div id="gejinshi" style="width: 800px;height:400px;display: none;"></div>
     
  	<div id="gebuliang" style="width: 800px;height:400px;display: none;"></div>
